syntax = "proto3";

package satelit;
option  go_package = ".;satelit_datastore";

service SatelitDatastore {
  rpc GetDHCPLease(GetDHCPLeaseRequest) returns (GetDHCPLeaseResponse) {}
}

message DHCPLease {
  string mac_address     = 1;
  string ip              = 2;
  string gateway         = 3;
  string dns_server      = 4;
  string metadata_server = 5;
}

message GetDHCPLeaseRequest {
  string mac_address = 1;
}

message GetDHCPLeaseResponse {
  DHCPLease lease = 1;
}
